codemp/generated/game/bg_saber.h

int PM_irand_timesync( int val1, int val2 );
void BG_ForcePowerDrain( playerState_t *ps, forcePowers_t forcePower, int overrideAmt );
qboolean BG_EnoughForcePowerForMove( int cost );
saberMoveName_t PM_AttackMoveForQuad( int quad );
int PM_SaberAnimTransitionAnim( int curmove, int newmove );
saberMoveName_t PM_CheckStabDown();
int PM_SaberMoveQuadrantForMovement( usercmd_t *ucmd );
qboolean PM_SaberInBounce( int move );
int PM_SaberAttackChainAngle( int move1, int move2 );
qboolean PM_SaberKataDone( int curmove, int newmove );
void PM_SetAnimFrame( playerState_t *gent, int frame, qboolean torso, qboolean legs );
int PM_SaberLockWinAnim( qboolean victory, qboolean superBreak );
int PM_SaberLockLoseAnim( playerState_t *genemy, qboolean victory, qboolean superBreak );
int PM_SaberLockResultAnim( playerState_t *duelist, qboolean superBreak, qboolean won );
void PM_SaberLockBreak( playerState_t *genemy, qboolean victory, int strength );
qboolean BG_CheckIncrementLockAnim( int anim, int winOrLose );
void PM_SaberLocked();
qboolean PM_SaberInBrokenParry( int move );
int PM_BrokenParryForParry( int move );
qboolean PM_CanBackstab();
saberMoveName_t PM_SaberFlipOverAttackMove();
saberMoveName_t PM_SaberBackflipAttackMove();
saberMoveName_t PM_SaberDualJumpAttackMove();
qboolean PM_SomeoneInFront( trace_t *tr );
saberMoveName_t PM_SaberLungeAttackMove( qboolean noSpecials );
saberMoveName_t PM_SaberJumpAttackMove2();
saberMoveName_t PM_SaberJumpAttackMove();
float PM_GroundDistance();
float PM_WalkableGroundDistance();
static qboolean PM_CanDoDualDoubleAttacks();
static qboolean PM_CheckEnemyPresence( int dir, float radius );
saberMoveName_t PM_CheckPullAttack();
qboolean PM_InSecondaryStyle();
saberMoveName_t PM_SaberAttackForMovement( saberMoveName_t curmove );
int PM_KickMoveForConditions();
qboolean PM_SaberMoveOkayForKata();
qboolean PM_CanDoKata();
qboolean PM_CheckAltKickAttack();
qboolean PM_SaberPowerCheck();
qboolean PM_CanDoRollStab();
void PM_WeaponLightsaber();
void PM_SetSaberMove( short newMove );
saberInfo_t *BG_MySaber( int clientNum, int saberNum );